--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <div class="col order">Thu <br> -1℃ 9℃🌤</div>
       </div>
     </div>
+    Open-source code, by Uranulzii Batbayar
     <script src="src/javascript.js"></script>
   </body>
 </html>
