--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col order">Thu <br> -1℃ 9℃🌤</div>
       </div>
     </div>
-    <a href="https://github.com/Uranulzii/my-weather-app-desu" >Open-source code</a>  , by Uranulzii Batbayar
+    <a href="https://github.com/Uranulzii/my-weather-app-desu"  target="_blank">Open-source code</a>  , by Uranulzii Batbayar
     <script src="src/javascript.js"></script>
   </body>
 </html>
